Fix the case when ijk are colinear

--- a/lone_pair_relative.ipynb
+++ b/lone_pair_relative.ipynb
@@ -495,8 +495,10 @@
     "This force perpendicular to the plane $ijk$, $f_{p}$ moves $i$ along the direction of the dihedral angle, so to keep the dihedral angle unchanged, we need a force acting on $l$ that (i) is perpendicular to the plane $jkl$, and (ii) has the same torque as the torsion force on $i$.\n",
     "\n",
     "$$\n",
-    "f_{p} = \\frac{f_i \\cdot \\left(r_{ji} \\times r_{jk}\\right)}{|\\left(r_{ji} \\times r_{jk}\\right)|}\\frac{ \\left(r_{ji} \\times r_{jk}\\right)}{|\\left(r_{ji} \\times r_{jk}\\right)|}\n",
+    "f_{p} = \\frac{f_i \\cdot \\left(r_{ji} \\times r_{jk}\\right)}{|r_{ji} \\times r_{jk}|}\\frac{ \\left(r_{ji} \\times r_{jk}\\right)}{|r_{ji} \\times r_{jk}|}\n",
     "$$\n",
+    "\n",
+    "**It ought to be noted that the three points $i$, $j$ and $k$ can be on the same line.** If that happens, $|r_{ji} \\times r_{jk}|$ would be zero, so to avoid such cases we have to set $f_p$ to $(0,0,0)$ if $i$, $j$ and $k$ are colinear.\n",
     "\n",
     "The arm of the force is $v_2 + v_3$, so the torque is calculated as \n",
     "\n",
@@ -610,13 +612,14 @@
     "\n",
     "    # Project the force on the dihedral angle to keep it unchanged\n",
     "    # Normal vector of plane ikj\n",
-    "    fpl = torch.zeros(3)\n",
+    "    fp = torch.zeros(3)\n",
     "    normal_ikj = torch.linalg.cross(uji, rjk)\n",
     "    normal_ikj_norm = torch.linalg.norm(normal_ikj)\n",
-    "    if normal_ikj_norm > 0:\n",
+    "    if normal_ikj_norm > 1e-6:\n",
     "        normal_ikj /= normal_ikj_norm\n",
-    "    # Force on plane ikj\n",
-    "    fp = torch.dot(fi, normal_ikj) * normal_ikj\n",
+    "        # Force on plane ikj\n",
+    "        fp = torch.dot(fi, normal_ikj) * normal_ikj\n",
+    "        # print('fp = ', fp)\n",
     "    # The height vector in triangle ijk from jk to i\n",
     "    hijk_ri = v2 + v3\n",
     "    # Torque of fpikj\n",
@@ -625,23 +628,21 @@
     "    h_l = torch.dot(rkl, v2_normed) * v2_normed\n",
     "    h_l_norm = torch.linalg.norm(h_l)\n",
     "    # The force on l after moving the torque\n",
-    "    if h_l_norm > 0:\n",
-    "        fpl += torch.linalg.cross(torque_p, h_l) / (h_l_norm * h_l_norm)\n",
-    "        fl += fpl\n",
+    "    fpl = torch.linalg.cross(torque_p, h_l) / (h_l_norm * h_l_norm)\n",
+    "    fl += fpl\n",
     "    rjk_norm = torch.linalg.norm(rjk)\n",
-    "    if rjk_norm > 0:\n",
-    "        tmp = torch.linalg.cross(torch.linalg.cross((ri - rk), fp) - torch.linalg.cross(rkl, fpl), -rjk) / (rjk_norm * rjk_norm)\n",
-    "        tmp_k = fp - fpl - tmp\n",
-    "        fj += tmp\n",
-    "        fk += tmp_k\n",
+    "    tmp = torch.linalg.cross(torch.linalg.cross((ri - rk), fp) - torch.linalg.cross(rkl, fpl), -rjk) / (rjk_norm * rjk_norm)\n",
+    "    tmp_k = fp - fpl - tmp\n",
+    "    fj += tmp\n",
+    "    fk += tmp_k\n",
     "\n",
     "    # Project the remaining force on the bond angle (alpha)\n",
     "    fai = fi - fp - frij\n",
     "    torque_j = torch.linalg.cross(rji, fai)\n",
-    "    if rjk_norm > 0:\n",
-    "        fak = torch.linalg.cross(torque_j, rjk) / (rjk_norm * rjk_norm)\n",
-    "        fk += fak\n",
-    "        fj += fai - fak\n",
+    "    # We can assume |rjk| > 0\n",
+    "    fak = torch.linalg.cross(torque_j, rjk) / (rjk_norm * rjk_norm)\n",
+    "    fk += fak\n",
+    "    fj += fai - fak\n",
     "    \n",
     "    return torch.zeros(3), fj.detach().clone(), fk.detach().clone(), fl.detach().clone()\n",
     "\n"
@@ -673,6 +674,55 @@
    "source": [
     "print(redistribute_relative_force_proj(fi, rj, rk, rl, 1.0, 60.0, 50.0))\n",
     "print(redistribute_relative_force_autograd(fi, rj, rk, rl, 1.0, 60.0, 50.0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Numerical error when $i$, $j$ and $k$ on the same line\n",
+    "\n",
+    "The gradient-based method does not need the position of $i$, but the projection-based method uses it. Moreover, $i$, $j$ and $k$ can be colinear, so we have to be very careful in such cases. The NAMD's implementation check if the cross product $|r_{ji} \\times r_{jk}|$ is less than 1e-, and set the force on the $ijk$ plane to 0 if so. It seems the choice of 1e-6 is fair."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor([0., 0., 0.]), tensor([1.8667, 2.4971, 6.3688]), tensor([-0.8667, -0.4971, -2.3688]), tensor([ 5.8243e-07,  2.4301e-07, -4.7979e-08]))\n",
+      "(tensor([0., 0., 0.]), tensor([1.8675, 2.4951, 6.3689]), tensor([-0.8675, -0.4951, -2.3689]), tensor([ 6.0923e-07,  2.5536e-07, -5.0275e-08]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The error seems to be reasonable\n",
+    "test_angle = 179.999966886680752\n",
+    "print(redistribute_relative_force_proj(fi, rj, rk, rl, 1.0, test_angle, 0))\n",
+    "print(redistribute_relative_force_autograd(fi, rj, rk, rl, 1.0, test_angle, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor([0., 0., 0.]), tensor([1.8675, 2.4951, 6.3689]), tensor([-0.8675, -0.4951, -2.3689]), tensor([0., 0., 0.]))\n",
+      "(tensor([0., 0., 0.]), tensor([1.8675, 2.4951, 6.3689]), tensor([-0.8675, -0.4951, -2.3689]), tensor([ 1.2910e-16,  5.4110e-17, -1.0653e-17]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(redistribute_relative_force_proj(fi, rj, rk, rl, 1.0, 180, 0))\n",
+    "print(redistribute_relative_force_autograd(fi, rj, rk, rl, 1.0, 180, 0))"
    ]
   }
  ],
