--- a/lone_pair_relative.ipynb
+++ b/lone_pair_relative.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "## Calculate the position of a lone pair relative to three host atoms\n",
     "\n",
-    "This kind of lone pair definition corresponds to \"3 hosts - relative (val1>0)\" in `charmm/source/dynamc/lonepair.F90`. Assuming that $r_i$ is the position of the lone pair to be determined, $r_j$, $r_k$ and $r_l$ are the positions of three host atoms, $r_j$ can be represented as $r_i + v_1 + v_2 + v_3$ with $v_1$, $v_2$ and $v_3$ defined as follows:\n",
+    "This kind of lone pair definition corresponds to \"3 hosts - relative (val1>0)\" in `charmm/source/dynamc/lonepair.F90`. Assuming that $r_i$ is the position of the lone pair to be determined, $r_j$, $r_k$ and $r_l$ are the positions of three host atoms, $r_i$ can be represented as $r_j + v_1 + v_2 + v_3$ with $v_1$, $v_2$ and $v_3$ defined as follows:\n",
     "\n",
     "<center><img src=\"relative.png\" width=\"20%\" height=\"20%\"></center>\n",
     "\n",
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,6 +596,7 @@
     "    plane = torch.cross(rjk, rkl)\n",
     "    dsina = distance * sin_alpha\n",
     "    dcosa = distance * cos_alpha\n",
+    "    rjk_norm = torch.linalg.norm(rjk)\n",
     "    v1 = dcosa * (rjk / torch.linalg.norm(rjk))\n",
     "    v2_normed = plane.cross(rjk) / torch.linalg.norm(plane.cross(rjk))\n",
     "    v2 = dsina * cos_theta * v2_normed\n",
@@ -608,12 +609,14 @@
     "    if rij_norm > 0:\n",
     "        uji = rji / rij_norm\n",
     "        frij = torch.dot(fi, uji) * uji\n",
-    "        fj += frij\n",
+    "    else:\n",
+    "        frij = torch.zeros(3)\n",
+    "    fj += frij\n",
     "\n",
     "    # Project the force on the dihedral angle to keep it unchanged\n",
     "    # Normal vector of plane ikj\n",
     "    fp = torch.zeros(3)\n",
-    "    normal_ikj = torch.linalg.cross(uji, rjk)\n",
+    "    normal_ikj = torch.linalg.cross(rji, rjk)\n",
     "    normal_ikj_norm = torch.linalg.norm(normal_ikj)\n",
     "    if normal_ikj_norm > 1e-6:\n",
     "        normal_ikj /= normal_ikj_norm\n",
@@ -621,7 +624,7 @@
     "        fp = torch.dot(fi, normal_ikj) * normal_ikj\n",
     "        # print('fp = ', fp)\n",
     "    # The height vector in triangle ijk from jk to i\n",
-    "    hijk_ri = v2 + v3\n",
+    "    hijk_ri = rji - (torch.dot(rji, rjk) * rjk) / (rjk_norm * rjk_norm)\n",
     "    # Torque of fpikj\n",
     "    torque_p = torch.linalg.cross(hijk_ri, fp)\n",
     "    # The height vector in triangle ljk from jk to l\n",
@@ -630,7 +633,7 @@
     "    # The force on l after moving the torque\n",
     "    fpl = torch.linalg.cross(torque_p, h_l) / (h_l_norm * h_l_norm)\n",
     "    fl += fpl\n",
-    "    rjk_norm = torch.linalg.norm(rjk)\n",
+    "\n",
     "    tmp = torch.linalg.cross(torch.linalg.cross((ri - rk), fp) - torch.linalg.cross(rkl, fpl), -rjk) / (rjk_norm * rjk_norm)\n",
     "    tmp_k = fp - fpl - tmp\n",
     "    fj += tmp\n",
@@ -659,21 +662,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([0., 0., 0.]), tensor([2.0716, 2.3615, 2.2850]), tensor([-3.7683, -1.4918,  1.9375]), tensor([ 2.6968,  1.1303, -0.2225]))\n",
-      "(tensor([0., 0., 0.]), tensor([2.0716, 2.3615, 2.2850]), tensor([-3.7683, -1.4918,  1.9375]), tensor([ 2.6968,  1.1303, -0.2225]))\n"
+      "(tensor([0., 0., 0.]), tensor([1.8808, 2.2695, 2.0791]), tensor([-3.3945, -1.3231,  2.1284]), tensor([ 2.5137,  1.0536, -0.2074]))\n",
+      "(tensor([0., 0., 0.]), tensor([1.8808, 2.2695, 2.0791]), tensor([-3.3945, -1.3231,  2.1284]), tensor([ 2.5137,  1.0536, -0.2074]))\n"
      ]
     }
    ],
    "source": [
-    "print(redistribute_relative_force_proj(fi, rj, rk, rl, 1.0, 60.0, 50.0))\n",
-    "print(redistribute_relative_force_autograd(fi, rj, rk, rl, 1.0, 60.0, 50.0))"
+    "print(redistribute_relative_force_proj(fi, rj, rk, rl, 1.0, 50.0, 60.0))\n",
+    "print(redistribute_relative_force_autograd(fi, rj, rk, rl, 1.0, 50.0, 60.0))"
    ]
   },
   {
@@ -694,7 +697,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([0., 0., 0.]), tensor([1.8667, 2.4971, 6.3688]), tensor([-0.8667, -0.4971, -2.3688]), tensor([ 5.8243e-07,  2.4301e-07, -4.7979e-08]))\n",
+      "(tensor([0., 0., 0.]), tensor([1.8667, 2.4971, 6.3688]), tensor([-0.8667, -0.4971, -2.3688]), tensor([ 5.8808e-07,  2.4674e-07, -4.8548e-08]))\n",
       "(tensor([0., 0., 0.]), tensor([1.8675, 2.4951, 6.3689]), tensor([-0.8675, -0.4951, -2.3689]), tensor([ 6.0923e-07,  2.5536e-07, -5.0275e-08]))\n"
      ]
     }
@@ -724,6 +727,39 @@
     "print(redistribute_relative_force_proj(fi, rj, rk, rl, 1.0, 180, 0))\n",
     "print(redistribute_relative_force_autograd(fi, rj, rk, rl, 1.0, 180, 0))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test corner case with zero distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor([0., 0., 0.]), tensor([1., 2., 4.]), tensor([0., 0., 0.]), tensor([0., 0., 0.]))\n",
+      "(tensor([0., 0., 0.]), tensor([1., 2., 4.]), tensor([0., 0., 0.]), tensor([-0., 0., 0.]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(redistribute_relative_force_proj(fi, rj, rk, rl, 0.0, 180, 0))\n",
+    "print(redistribute_relative_force_autograd(fi, rj, rk, rl, 0.0, 180, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
